[package]
name = "oc-wasm-safe"
version = "0.1.1"
authors = ["Christopher Head <chead@chead.ca>"]
edition = "2018"
description = "Safe but low-level wrappers around the OC-Wasm system call interface"
repository = "https://gitlab.com/Hawk777/oc-wasm-safe"
license = "GPL-3.0-only"
keywords = ["minecraft", "oc-wasm", "opencomputers"]
categories = ["games"]
resolver = "2"

[dependencies.minicbor]
default-features = false
version = "^0.9"

[dependencies.oc-wasm-sys]
version = "^0.1"

[dependencies.ordered-float]
default-features = false
version = "^2.5"

[dependencies.uuid]
default-features = false
version = "^0.8"

[features]
default = ["panic", "std"]
panic = []
std = []

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
